--- a/client/src/components/Home/image.scss
+++ b/client/src/components/Home/image.scss
@@ -85,6 +85,7 @@
   background-color:transparent;
   color:white;
   background-color: #0074B7;
+  letter-spacing: 2px;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:15px;
   box-shadow:0em 0em 1.0em lightblue;
