--- a/client/src/components/Layout/index.scss
+++ b/client/src/components/Layout/index.scss
@@ -7,6 +7,8 @@
     flex-direction: row;
     color:white;
     text-align: center;
+    border-radius:5px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
 }
 .footey {
@@ -14,6 +16,7 @@
     height:4rem;
     bottom:0;
     text-align: center;
+    border-radius:5px;
     color:white;
 }
 .services {
