--- a/client/src/components/SignUp/index.scss
+++ b/client/src/components/SignUp/index.scss
@@ -16,13 +16,12 @@
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
-  
     background-color:#1b2430;
     content: ' ';
     opacity: 0.93;
     animation: fadeIn 4s;
     border-radius:50px;
-    box-shadow:0em 0em 1.0em blue;
+    box-shadow:0em 0em 1.0em orange;
    
    
    
