--- a/client/src/components/Quote/index.scss
+++ b/client/src/components/Quote/index.scss
@@ -3,13 +3,14 @@
     width:100%;
     background-image: url('../../assets/images/aboutus.png');
     background-size:cover;
+    background-position: left;
     text-align: center;
 }
 .email-form {
     height:35vh;
     width:50vh;
     border-style:solid;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
