--- a/client/src/components/Login/index.scss
+++ b/client/src/components/Login/index.scss
@@ -128,7 +128,7 @@
     .login {
        height:25rem;
        width:20rem;
-       position: fixed;
+       position: absolute;
        top: 50%;
        left: 50%;
        /* bring your own prefixes */
