--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -445,7 +445,7 @@ ul.no-bullets {
   }
   @media screen and (max-width: 500px) {
     .ptag2 {
-        font-size:5px;
+        font-size:8px;
     }
     .about-box {
         height:50%;
@@ -512,28 +512,32 @@ ul.no-bullets {
     
     
     .ptag3 {
-        font-size:5px;
+        font-size:8px;
     }
     .stary {
         font-size:10px;
        
     }
     .box-1 {
+        width:100%;
         p {
-            font-size:10px;
+            font-size:20px;
+            
             
         }
       
     }
     .box-2 {
+        width:100%;
         p {
-            font-size:10px;
+            font-size:20px;
            
         }
     }
     .box-3 {
+        width:100%;
         p {
-            font-size:10px;
+            font-size:20px;
           
         }
     }
@@ -551,12 +555,13 @@ ul.no-bullets {
     }
     
     .request-btn1{
-        font-size:5px;
-        height:2.5vh;
+        font-size:15px;
+        height:3rem;
+        width:10rem;
         margin:50px
     }
     .whats-next {
-        height:35rem;
+        height:50rem;
         width:50%;  
         margin:auto;
         display:flex;
@@ -564,8 +569,10 @@ ul.no-bullets {
         align-items: center;
         position:relative;
         left:32.5%;
-        top:5rem;
+        top:3rem;
         font-size:25px;
+       
+        
         
      
         gap:5%;
